Meta Description updated

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Join Christ the Living Petra Church, a non-denominational community founded on Jesus Christ, the Living Rock. We gather to study God’s Word, grow spiritually, and establish His Kingdom on earth. Embrace your faith with us as we support one another in love, await Christ’s return, and become servant-leaders in God’s purpose.">
+    <meta
+      name="description"
+      content="Christ the Living Petra Church is non-denominational Tamil Church in Munich, Germany. A simple and straightforward church following the Word of God and not man-made doctrines or theories. We believe in a triune God (God the Father, Christ the Son and the Holy Spirit)."
+    />
     <title>Christ The Living Petra Church</title>
   </head>
   <body>
